--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -73,7 +73,7 @@ fabs:
 		basedOn:									"snake/Scene"
 		tweak: 
 		{
-			toTweak:								["snakeComponents"]
+			toTweak:								["snakeComponents", "snakeCollision"]
 			snakeComponents:
 			{
 				nodeName:							"SnakeArmature"
@@ -92,6 +92,17 @@ fabs:
 					}
 					Camera:
 					{
+					}
+				}
+			}
+			snakeCollision:
+			{
+				nodeName:							"SnakeArmature/Bone/_collision_sphere"
+				components:
+				{
+					ModelCollision:
+					{
+						ShouldCallback:				true
 					}
 				}
 			}
