--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
@@ -64,6 +64,12 @@
     <Filter Include="Header Files\Graphics\Meshes">
       <UniqueIdentifier>{21863451-cddb-41b9-ac5d-36db9743f0c3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\CollisionDetection">
+      <UniqueIdentifier>{f13a93df-ce1e-4dff-8339-9931e9276f63}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\CollisionDetection">
+      <UniqueIdentifier>{ca006267-0dd9-4f32-b249-27bcd44b57a7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -207,9 +213,6 @@
     <ClCompile Include="src\Geometry\Ray.cpp">
       <Filter>Source Files\Geometry</Filter>
     </ClCompile>
-    <ClCompile Include="include\Geometry\Triangle.h">
-      <Filter>Header Files\Geometry</Filter>
-    </ClCompile>
     <ClCompile Include="src\Geometry\Triangle.cpp">
       <Filter>Source Files\Geometry</Filter>
     </ClCompile>
@@ -226,6 +229,27 @@
       <Filter>Source Files\ECS\GeneralCompEntities</Filter>
     </ClCompile>
     <ClCompile Include="src\ECS\GeneralComponents\LateNodeGlobalMatrixComp.cpp">
+      <Filter>Source Files\ECS\GeneralComponents</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CollisionDetection\CollisionDetection.cpp">
+      <Filter>Source Files\CollisionDetection</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CollisionDetection\OBBtreesCollision.cpp">
+      <Filter>Source Files\CollisionDetection</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CollisionDetection\RayDistance.cpp">
+      <Filter>Source Files\CollisionDetection</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CollisionDetection\SweepAndPrune.cpp">
+      <Filter>Source Files\CollisionDetection</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CollisionDetection\TrianglesVsTriangles.cpp">
+      <Filter>Source Files\CollisionDetection</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ECS\GeneralCompEntities\ModelCollisionCompEntity.cpp">
+      <Filter>Source Files\ECS\GeneralCompEntities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ECS\GeneralComponents\ModelCollisionComp.cpp">
       <Filter>Source Files\ECS\GeneralComponents</Filter>
     </ClCompile>
   </ItemGroup>
@@ -408,6 +432,27 @@
       <Filter>Header Files\ECS\GeneralCompEntities</Filter>
     </ClInclude>
     <ClInclude Include="include\ECS\GeneralComponents\LateNodeGlobalMatrixComp.h">
+      <Filter>Header Files\ECS\GeneralComponents</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CollisionDetection\CollisionDetection.h">
+      <Filter>Header Files\CollisionDetection</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CollisionDetection\SweepAndPrune.h">
+      <Filter>Header Files\CollisionDetection</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CollisionDetection\OBBtreesCollision.h">
+      <Filter>Header Files\CollisionDetection</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CollisionDetection\TrianglesVsTriangles.h">
+      <Filter>Header Files\CollisionDetection</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CollisionDetection\RayDistance.h">
+      <Filter>Header Files\CollisionDetection</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ECS\GeneralCompEntities\ModelCollisionCompEntity.h">
+      <Filter>Header Files\ECS\GeneralCompEntities</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ECS\GeneralComponents\ModelCollisionComp.h">
       <Filter>Header Files\ECS\GeneralComponents</Filter>
     </ClInclude>
   </ItemGroup>
