--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
@@ -237,9 +237,6 @@
     <ClCompile Include="src\CollisionDetection\OBBtreesCollision.cpp">
       <Filter>Source Files\CollisionDetection</Filter>
     </ClCompile>
-    <ClCompile Include="src\CollisionDetection\RayDistance.cpp">
-      <Filter>Source Files\CollisionDetection</Filter>
-    </ClCompile>
     <ClCompile Include="src\CollisionDetection\SweepAndPrune.cpp">
       <Filter>Source Files\CollisionDetection</Filter>
     </ClCompile>
@@ -251,6 +248,9 @@
     </ClCompile>
     <ClCompile Include="src\ECS\GeneralComponents\ModelCollisionComp.cpp">
       <Filter>Source Files\ECS\GeneralComponents</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CollisionDetection\RayDeltaUncollide.cpp">
+      <Filter>Source Files\CollisionDetection</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -446,14 +446,17 @@
     <ClInclude Include="include\CollisionDetection\TrianglesVsTriangles.h">
       <Filter>Header Files\CollisionDetection</Filter>
     </ClInclude>
-    <ClInclude Include="include\CollisionDetection\RayDistance.h">
-      <Filter>Header Files\CollisionDetection</Filter>
-    </ClInclude>
     <ClInclude Include="include\ECS\GeneralCompEntities\ModelCollisionCompEntity.h">
       <Filter>Header Files\ECS\GeneralCompEntities</Filter>
     </ClInclude>
     <ClInclude Include="include\ECS\GeneralComponents\ModelCollisionComp.h">
       <Filter>Header Files\ECS\GeneralComponents</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CollisionDetection\RayDeltaUncollide.h">
+      <Filter>Header Files\CollisionDetection</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Geometry\Triangle.h">
+      <Filter>Header Files\Geometry</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
