Bugfixing and such

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -22,6 +22,7 @@ inputSettings: {
 		MoveBackward:	["S","DOWN","RIGHT_MOUSE"]
 		MoveLeft:		["A","LEFT"]
 		MoveRight:		["D","RIGHT"]
+		MoveUp:			["SPACE"]
 		CullingDebug:	["TAB"]
 		Exit:			["ESCAPE"]
 	}
