Completing snake game

--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -287,6 +287,7 @@
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <CreateHotpatchableImage>false</CreateHotpatchableImage>
       <ControlFlowGuard>false</ControlFlowGuard>
+      <WholeProgramOptimization>true</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
