--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -2,20 +2,21 @@
 
 gameDLL:
 {
-	path_win:										"game_dll/x64/Debug/game_dll.dll"
+	path_win:										"game_dll/x64/Release/game_dll.dll"
 }
 
 // "_empty" is already imported in order to build logic around it
 imports:
 {
-	toImport:										["map", "snake"]
+	toImport:										["map", "snake", "apple"]
 	map:											"Table_room/scene.gltf"
 	snake:											"Snake/Timber Rattlesnake.gltf"
+	apple:											"Apple/scene.gltf"
 }
 
 fabs:
 {
-	toFab:											["map_fab", "snake_fab0", "snake_fab1", "snake_fab2", "snake_player"]
+	toFab:											["map_fab", "snake_fab0", "snake_fab1", "snake_fab2", "snake_player", "apple_fab0", "apple_fab1", "apple_fab2"]
 	map_fab: 
 	{
 		basedOn:									"map/Scene"
@@ -233,14 +234,74 @@ fabs:
 			}
 		}
 	}
+	apple_fab0:
+	{
+		basedOn:									"apple/Scene"
+		tweak:
+		{
+			toTweak:								["positionComponent"]
+			positionComponent:
+			{
+				nodeName:							"RootNode (gltf orientation matrix)"
+				components:
+				{
+					NodeData:
+					{
+						GlobalTranslation:			[ -1.5, -1.0, 0.0]
+					}
+				}
+			}
+		}
+	}
+	apple_fab1:
+	{
+		basedOn:									"apple/Scene"
+		tweak:
+		{
+			toTweak:								["positionComponent"]
+			positionComponent:
+			{
+				nodeName:							"RootNode (gltf orientation matrix)"
+				components:
+				{
+					NodeData:
+					{
+						GlobalTranslation:			[ -0.5, -1.0, 0.0]
+					}
+				}
+			}
+		}
+	}
+	apple_fab2:
+	{
+		basedOn:									"apple/Scene"
+		tweak:
+		{
+			toTweak:								["positionComponent"]
+			positionComponent:
+			{
+				nodeName:							"RootNode (gltf orientation matrix)"
+				components:
+				{
+					NodeData:
+					{
+						GlobalTranslation:			[  0.5, -1.0, 0.0]
+					}
+				}
+			}
+		}
+	}
 }
 
 init:
 {
-	toInit:					["map_init", "snake_0", "snake_1", "snake_2", "snake_3"]
+	toInit:					["map_init", "snake_0", "snake_1", "snake_2", "snake_3", "apple_0", "apple_1", "apple_2"]
 	map_init:				"map_fab"
 	snake_0:				"snake_player"
 	snake_1:				"snake_fab0"
 	snake_2:				"snake_fab1"
 	snake_3:				"snake_fab2"
+	apple_0:				"apple_fab0"
+	apple_1:				"apple_fab1"
+	apple_2:				"apple_fab2"
 }
